# AqarIntelOS

./: .gitignore  README.md  pyproject.toml
__MACOSX/frontend/components/ui/: ._sheet.tsx
backend/: README.md
backend/data/: projects_cleaned.csv
backend/faiss_index2/: index.faiss  index.pkl
backend/src/: agent.py  api.py  config.py  data_loader.py  embeddings.py  main.py  map_tool.py  market_info_tool.py  proj_intelligent_tool.py  projects_tools.py  python_code_tool.py  rag_chain.py  search_tool.py  tools.py  vectorstore.py
backend/src/Auth/: auth_models.py  auth_schemas.py  auth_service.py  auth_utils.py  database.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/components/: ProjectsMap.tsx  SourceChunks.tsx  projectsSection.tsx  visualMessage.tsx
frontend/components/auth/: AuthContext.tsx  AuthModal.tsx  ProtectedRoute.tsx  RegisterForm.tsx  UserProfileDropdown.tsx  loginForm.tsx
